<resources>
    <string name="app_name">小農1號 - 行動農場</string>
    <string name="facebook_app_id">918735938148015</string>

    <string name="last_name_text">姓</string>
    <string name="first_name_text">名字</string>
    <string name="email_text">電子信箱</string>
    <string name="password_text">密碼（至少8字元）</string>
    <string name="password_confirm_text">密碼確認</string>
    <string name="sign_in_button">登入</string>
    <string name="sign_up_button">註冊</string>
    <string name="log_out_button">登出</string>
    <string name="fb_login_button">使用Facebook登入</string>

    <string name="product_unit">箱</string>
    <string name="money_unit">元</string>
    <string name="notify_shipment">通知物流</string>
    <string name="order_empty">沒有訂單資料</string>
    <string name="bill_empty">沒有帳單資料</string>

    <string name="cash">應得金額</string>
    <string name="serial_number">出貨編號：</string>
    <string name="bill_detail">帳單詳細資料</string>
    <string name="show_bill_detail_button">顯示詳細資料</string>

    <!-- gcm -->
    <string name="gcm_defaultSenderId">702294285521</string>


</resources>
