<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/fb_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:minHeight="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/fb_background"
            android:drawableLeft="@drawable/com_facebook_inverse_icon"
            android:textSize="@dimen/basic_text_size"
            android:textColor="@color/white"
            android:text="@string/fb_login_button"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#15000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:password="true" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:minHeight="0dp"
            android:paddingTop="@dimen/activity_sign_in_button_padding"
            android:paddingBottom="@dimen/activity_sign_in_button_padding"
            android:layout_margin="0dp"
            android:textSize="@dimen/basic_text_size"
            android:background="@color/color_primary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sign_in_button"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent" />

</LinearLayout>